--- a/templates/galeria_5.html
+++ b/templates/galeria_5.html
@@ -12,9 +12,9 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <H1 id="tituloGaleria">Galeria 5</H1>
+            <H2 id="tituloGaleria">Muro Horizontal</H2>
         </div>
-    </div>
+    </div>    
     <div class="row justify-content-center align-items-center">
         <div class="col-md-10">
             <div class="galeria">
