--- a/static/css/galerias.css
+++ b/static/css/galerias.css
@@ -106,7 +106,10 @@ button:active {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-content: stretch;
+    align-items: stretch;
 }
 
 .galeria .card {
