--- a/static/css/galerias.css
+++ b/static/css/galerias.css
@@ -11,6 +11,7 @@ main {
 
 .navbar {
     height: 100px; /* Ajusta la altura según tus necesidades */
+    border-bottom: 2px solid hsl(34, 62%, 36%) !important; /* Borde inferior rojo de 4px */
 }
 
 .custom-navbar {
