--- a/templates/galeria_3.html
+++ b/templates/galeria_3.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <H2 id="tituloGaleria">Noctrunas Urbanas</H2>
+            <H2 id="tituloGaleria">Nocturnas Urbanas</H2>
         </div>
     </div>
     <div class="row justify-content-center align-items-center">
